tests/ifcc-test-output/testfiles-part4_3-errorDoubledec/gcc-compile.txt
input.c:3:9: error: redefinition of 'variable'
    int variable = 10;
        ^
input.c:2:9: note: previous definition is here
    int variable = 42;
        ^
1 error generated.

return code: 1
